<resources>
    <string name="app_name">Questionaire</string>
    <string name="logo_description">Firmenlogo</string>
    <string name="got2CreateFolder">Die App muss einen Ordner anlegen.</string>
    <string name="permissionMessage">Die App muss nur einen Ordner für die XML anlegen. Es geschieht nichts mit Ihren Daten.</string>
    <string name="questionaire">Questionaire</string>
    <string name="start">Starten</string>
    <string name="settings">Einstellungen</string>
    <string name="leaderboard">Bestenliste</string>
    <string name="xml">Fragenkatalog</string>
    <string name="xml_import">Import</string>
    <string name="xml_help">Hilfe</string>
    <string name="export">Export</string>
    <string name="xml_path">Dateipfad</string>
    <string name="noXML">Kein Fragenkatalog vorhanden.</string>
    <string name="enter_password">Passworteingabe</string>
    <string name="setup_password">Passwort festlegen</string>
    <string name="change_password">Passwort ändern</string>
    <string name="password">Passwort</string>
    <string name="hint">...</string>
    <string name="sign_in">Anmelden</string>
    <string name="confirm">Bestätigen</string>
    <string name="score">Punkte</string>
    <string name="question">Frage</string>
    <string name="questionSkipped">Frage übersprungen.</string>
    <string name="answerRight">Antwort ist richtig!</string>
    <string name="answerWrong">Antwort ist falsch!</string>
    <string name="goOn">Weiter</string>
    <string name="empty_directory">Leerer Ordner</string>
    <string name="storage_removed">Speicher wurde entferntet.</string>
    <string name="choose_file">Wähle eine Datei</string>
    <string name="error_selecting_file">Fehler beim Öffnen der Datei</string>
    <string name="internal_storage">Internal storage</string>
    <string name="chooser_xml">Wähle XML-Datei aus</string>
    <string name="chooser_img">Wähle eine Bild-Datei aus</string>
    <string name="logo">Firmenzeichen</string>
    <string name="logoMovedOrDeleted">Logo wurde verschoben oder gelöscht.</string>
    <string name="change_logo">Firmenzeichen ändern</string>
    <string name="result">Ergebnis:</string>
    <string name="skip">Überspringen</string>
    <string name="help">Hilfe</string>
    <string name="reset">Zurücksetzen</string>
    <string name="send">Absenden</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="congrats">Quiz beendet</string>
    <string name="acceptGTCT">AGB*</string>
    <string name="badName">Ungültiger Name.</string>
    <string name="badEmail">Ungültige E-Mail-Adresse.</string>
    <string name="badNameEmail">Name und Email ungütlig.</string>
    <string name="dataSaved">Daten gespeichert.</string>
    <string name="resetLeaderboard">Bestenliste zurückgesetzt.</string>
    <string name="csvExportSuccessful">CSV erfolgreich exportiert.</string>
    <string name="csvNoEntry">Kein Eintrag vorhanden.</string>
    <string name="registerForLeaderboard">Hier können Sie sich für die Bestenliste registrieren:</string>
    <string name="gtct">*: Ihre E-Mail wird nicht an Dritte weitergegeben. Wir verwenden sie lediglich zur Kontaktaufnahme.</string>

    <string name="help_main">Beim ersten Aufrufen der "Einstellungen" müssen Sie ein Passwort
        festlegen. Vergessen Sie das Passwort nicht, es schützt Ihre Einstellungen vor unbefugten Änderungen.\n\n
        Um das Quiz starten zu können müssen Sie zunächst in den "Einstellungen" einen Fragenkatalog importieren.
        Genauere Anweisungen finden Sie in den "Einstellungen" unter "Fragenkatalog", über das "Fragezeichen".\n\n
        Punkteverteilung:\n
        Korrekte Antwort: 5 Punkte\n
        Falsche Antwort: -3 Punkte\n
        Frage überspringen: -1 Punkt</string>

    <string name="help_xml">Import:\n Um einen Fragenkatalog zu importieren tippen Sie bitte auf "Import". Suchen
        Sie anschließend mit dem Datei-Browser die gewünschte XML-Datei aus.\n\n
        Fragenkatalog-Schema:</string>

    <string name="help_lb">Export:\n Wenn Sie die Bestenliste über den Button "Export" exportieren, so wird aus
    den vorhandenen Daten eine .csv erstellt die Sie anschließend einfach via Excel auslesen können. \n\n
    Abgelegt wird die Datei im Ordner: \n "/Android/data/tkapps.questionaire/files" (Internal Storage)\n\n
    Zurücksetzen:\n Die Bestenliste kann über den Button "Zurücksetzen" gelöscht werden. Außerdem wird die Bestenliste
     automatisch gelöscht, wenn ein neuer Fragenkatalog eingelesen wird.</string>

    <string name="ok">Alles klar!</string>
</resources>
