<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".activity.AddScoreActivity">

    <TextView
        android:id="@+id/textView_scoreToLeaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="35sp"
        android:textColor="@android:color/background_light"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_scoreToLeaderboard"
        android:background="@android:color/background_light"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="10dp"
        android:layout_below="@+id/relativeLayoutName">

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayoutScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:layout_below="@+id/relativeLayoutEmail"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_gtct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptGTCT"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_toRightOf="@+id/AGB"
            android:layout_centerInParent="true"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/AGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/score"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_toLeftOf="@+id/textView_scoreLeaderboard"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@id/textView_scoreLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="0"
            android:textColor="@android:color/black"
            android:paddingRight="5dp"
            android:textSize="15sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutScore"
        android:text="@string/gtct"
        android:textSize="10sp"
        android:textColor="@android:color/background_light"
        android:padding="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30sp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:text="@string/skip"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_skip"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30sp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:text="@string/send"
        android:textSize="18sp" />
</RelativeLayout>