<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="tkapps.questionaire.SettingsActivity">

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="10sp"
        android:textColor="@android:color/background_light"
        android:padding="20sp"
        android:background="@android:color/holo_blue_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:clickable="false"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/relativeLayoutXML"
        android:layout_below="@+id/textView_settings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/xml_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button_editXML"
            android:layout_toLeftOf="@+id/textView_XML"
            android:layout_toStartOf="@+id/textView_XML"
            android:id="@+id/button_importXML"
            android:layout_weight="1" />

        <Button
            android:text="@string/xml_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_XML"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_editXML"
            android:layout_weight="1" />

        <Button
            android:text="@string/xml_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_XML"
            android:layout_toRightOf="@+id/textView_XML"
            android:layout_toEndOf="@+id/textView_XML"
            android:id="@+id/button_exportXML"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_XML"
            android:text="@string/xml"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ellipsize="none"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:clickable="false"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/relativeLayoutPassword"
        android:layout_below="@+id/relativeLayoutXML"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
        <Button
            android:id="@+id/button_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_password"
            android:text="@string/change_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:clickable="false"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/relativeLayoutLogo"
        android:layout_below="@+id/relativeLayoutPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
        <Button
            android:id="@+id/button_changeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_logo"
            android:text="@string/change_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"/>
    </RelativeLayout>

</RelativeLayout>
