<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_setup"
    tools:context="tkapps.questionaire.activity.SettingsActivity">

    <TextView
        android:id="@+id/textView_setPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_password"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        />
    <RelativeLayout
        android:layout_below="@+id/textView_setPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:maxLength="10"
            android:textAlignment="inherit"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/button_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm"
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>
</RelativeLayout>