<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tkapps.questionaire.QuizActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp">

        <TextView
            android:id="@+id/textView_scoreCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"
            android:padding="05sp"
            android:layout_margin="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView_scoreCounter"
            android:text="@string/score"
            android:textSize="20sp"
            android:textColor="@android:color/background_light"
            android:layout_margin="10sp"/>

        <TextView
            android:id="@+id/textView_questionCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:padding="5sp"
            android:layout_margin="10sp"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView_questionCounter"
            android:text="@string/question"
            android:textSize="20sp"
            android:textColor="@android:color/background_light"
            android:layout_margin="10sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_Quiz"
            android:contentDescription="@string/logo_description"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/background_light"
            app:srcCompat="@drawable/questionaire_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:id="@+id/textView_question"
            android:textSize="30sp"
            android:text="Hier steht spaeter die Frage"
            android:gravity="center"
            android:layout_below="@+id/imageView_Quiz"/>
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_answer"
        android:layout_below="@+id/relativeLayoutQuestion"
        android:layout_margin="10sp" />

</RelativeLayout>
